--- a/AdManageKit/src/main/AndroidManifest.xml
+++ b/AdManageKit/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
             android:name="android.adservices.AD_SERVICES_CONFIG"
             android:resource="@xml/gma_ad_services_config"
             tools:replace="android:resource" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
