--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,19 @@
 [versions]
 agp = "8.11.1"
 billing = "8.0.0"
-firebaseBom = "33.16.0"
+firebaseBom = "34.2.0"
 kotlin = "2.1.0"
 coreKtx = "1.16.0"
 appcompat = "1.7.1"
-lifecycleProcess = "2.9.1"
+lifecycleProcess = "2.9.3"
 material = "1.12.0"
-activity = "1.10.1"
+activity = "1.11.0"
 constraintlayout = "2.2.1"
-playServicesAds = "24.4.0"
+playServicesAds = "24.6.0"
 userMessagingPlatform = "3.2.0"
 shimmer = "0.5.0"
+workRuntime = "2.10.4"
+composeCompiler = "1.5.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,9 +28,11 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 user-messaging-platform = { module = "com.google.android.ump:user-messaging-platform", version.ref = "userMessagingPlatform" }
 shimmer = { module = "com.facebook.shimmer:shimmer", version.ref = "shimmer" }
+androidx-work-runtime = { module = "androidx.work:work-runtime", version.ref = "workRuntime" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
