--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,37 @@
 [versions]
-agp = "8.11.1"
+activityCompose = "1.11.0"
+agp = "8.13.0"
 billing = "8.0.0"
-firebaseBom = "34.2.0"
+composeBom = "2025.10.01"
+firebaseBom = "34.5.0"
 kotlin = "2.1.0"
-coreKtx = "1.16.0"
+coreKtx = "1.17.0"
 appcompat = "1.7.1"
-lifecycleProcess = "2.9.3"
-material = "1.12.0"
+lifecycleProcess = "2.9.4"
+lifecycleViewmodelCompose = "2.9.4"
+lifecycleRuntimeCompose = "2.9.4"
+material = "1.13.0"
 activity = "1.11.0"
 constraintlayout = "2.2.1"
-playServicesAds = "24.6.0"
-userMessagingPlatform = "3.2.0"
+playServicesAds = "24.7.0"
+userMessagingPlatform = "4.0.0"
 shimmer = "0.5.0"
-workRuntime = "2.10.4"
+workRuntime = "2.11.0"
 composeCompiler = "1.5.8"
 
 [libraries]
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
+androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
+androidx-compose-foundation = { module = "androidx.compose.foundation:foundation" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
+androidx-compose-runtime = { module = "androidx.compose.runtime:runtime" }
+androidx-compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
+androidx-compose-ui = { module = "androidx.compose.ui:ui" }
+androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "lifecycleProcess" }
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 billing = { module = "com.android.billingclient:billing", version.ref = "billing" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
