Feat(Native): Add NativeTemplateView with 17 templates and Ad Loading Strategies
This commit introduces `NativeTemplateView`, a unified native ad component that supports 17 different template styles, and `AdLoadingStrategy`, a new system for controlling ad loading behavior across the library.

### Key Changes:

*   **`NativeTemplateView`:**
    *   A single, flexible component (`NativeTemplateView.kt`) that replaces the need for multiple native ad views.
    *   **17 Template Styles:** Supports 11 standard and 6 video-optimized templates (e.g., `card_modern`, `material3`, `list_item`, `magazine`, `video_vertical`).
    *   **XML & Programmatic Control:** Templates can be set via `app:adTemplate` in XML or programmatically using `setTemplate()`.
    *   **Shimmer & XML Preview:** Includes corresponding shimmer placeholders for each template and provides a live layout preview in the Android Studio designer.
    *   **Smart Layouts:** Automatically handles the visibility of optional elements (e.g., body, advertiser, star rating) and containers for clean presentation.
    *   **Compose Support:** Added `NativeTemplateCompose` and convenience Composables (e.g., `NativeMaterial3Compose`, `NativeListItemCompose`) for easy integration into Jetpack Compose.

*   **Ad Loading Strategies:**
    *   Introduced `AdLoadingStrategy` enum (`ON_DEMAND`, `ONLY_CACHE`, `HYBRID`) to provide fine-grained control over ad loading behavior.
    *   **`ON_DEMAND`:** Always fetches a fresh ad, showing a loading UI. Maximizes coverage.
    *   **`ONLY_CACHE`:** Instantly shows a preloaded ad; skips if none is cached. Best for UX.
    *   **`HYBRID`:** (Recommended) Checks cache first and falls back to fetching a new ad if the cache is empty.
    *   **Global & Local Configuration:** Strategies can be set globally in `AdManageKitConfig` or overridden for individual ad requests in `InterstitialAdBuilder`, `NativeTemplateView`, and other native ad components.

*   **Enhanced Interstitial & App O

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,22 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".LoadingStrategyTestActivity"
+            android:exported="false"
+            android:label="Loading Strategy Tester"
+            android:theme="@style/Theme.AdManageKit" />
+
+        <activity
+            android:name=".NativeTemplateTestActivity"
+            android:exported="false"
+            android:label="Native Template Tester"
+            android:theme="@style/Theme.AdManageKit" />
 
 
 
+        <meta-data android:name="com.google.android.gms.ads.flag.NATIVE_AD_DEBUGGER_ENABLED"
+            android:value="false" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
