--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
             android:label="Fragment Transition Ad Test"
             android:theme="@style/Theme.AdManageKit" />
 
+        <activity
+            android:name=".InterstitialTestActivity"
+            android:exported="false"
+            android:label="Interstitial Ad Test Suite"
+            android:theme="@style/Theme.AdManageKit" />
+
         <meta-data android:name="com.google.android.gms.ads.flag.NATIVE_AD_DEBUGGER_ENABLED"
             android:value="false" />
         <meta-data
