feat: Add multi-provider waterfall and Yandex Ads support
This commit introduces a major architectural change to support multi-provider ad waterfalls, allowing ad networks like Yandex to be used as fallbacks for AdMob.

### Core Architecture
- **Provider Interfaces**: Added a new `admanagekit-core` module with provider interfaces for all ad types (`InterstitialAdProvider`, `BannerAdProvider`, `NativeAdProvider`, `AppOpenAdProvider`, `RewardedAdProvider`).
- **Waterfall Orchestrators**: Implemented waterfall classes (`InterstitialWaterfall`, `BannerWaterfall`, etc.) that iterate through a chain of providers until an ad is successfully loaded.
- **Configuration**:
    - `AdProviderConfig`: A new singleton to configure the provider chain for each ad type.
    - `AdUnitMapping`: Maps a logical ad placement name to provider-specific ad unit IDs, enabling existing AdMob IDs to be used as lookup keys.
- **Type Mappers**: Introduced `AdKitAdError` and `AdKitAdValue` as network-agnostic types to standardize error and revenue data across different SDKs.

### Yandex Ads Integration
- **New Module**: Added the `admanagekit-yandex` module.
- **Yandex Providers**: Implemented all five ad provider interfaces for the Yandex Mobile Ads SDK.
- **Native Ad Rendering**: The `YandexNativeProvider` renders different layouts based on the `NativeAdSize` hint (`SMALL`, `MEDIUM`, `LARGE`), theming them to match the app's Material Design colors.
- **Registration**: Created `YandexProviderRegistration` to bundle and initialize all Yandex providers.

### AdMob Integration
- **AdMob Providers**: Wrapped existing AdMob logic into new provider classes (`AdMobInterstitialProvider`, `AdMobBannerProvider`, etc.) to make them compatible with the waterfall system.
- **Backward Compatibility**: The existing API (`AdManager`, `BannerAdView`, `NativeTemplateView`, etc.) is fully backward compatible. It automatically delegates to the waterfall orchestrators only when a provider chain is configured, otherwi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,12 @@
             android:label="Interstitial Ad Test Suite"
             android:theme="@style/Theme.AdManageKit" />
 
+        <activity
+            android:name=".WaterfallTestActivity"
+            android:exported="false"
+            android:label="Waterfall Ad Test"
+            android:theme="@style/Theme.AdManageKit" />
+
         <meta-data android:name="com.google.android.gms.ads.flag.NATIVE_AD_DEBUGGER_ENABLED"
             android:value="false" />
         <meta-data
