--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ userMessagingPlatform = "4.0.0"
 shimmer = "0.5.0"
 workRuntime = "2.11.0"
 composeCompiler = "1.5.8"
+yandexMobileads = "7.18.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -46,6 +47,7 @@ play-services-ads = { module = "com.google.android.gms:play-services-ads", versi
 user-messaging-platform = { module = "com.google.android.ump:user-messaging-platform", version.ref = "userMessagingPlatform" }
 shimmer = { module = "com.facebook.shimmer:shimmer", version.ref = "shimmer" }
 androidx-work-runtime = { module = "androidx.work:work-runtime", version.ref = "workRuntime" }
+yandex-mobileads = { module = "com.yandex.android:mobileads", version.ref = "yandexMobileads" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
