--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -39,7 +39,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Generate API Documentation
-        run: ./gradlew dokkaGenerateHtml
+        run: ./gradlew dokkaGeneratePublicationHtml
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
